[gd_scene load_steps=30 format=3 uid="uid://bggov3ak0ysqs"]

[ext_resource type="Script" path="res://lib/player.gd" id="1_k5g6x"]
[ext_resource type="PackedScene" uid="uid://ctoenkxklrdyj" path="res://scenes/paladin.tscn" id="1_stwfy"]
[ext_resource type="AnimationLibrary" uid="uid://b3myt5j3na8ea" path="res://assets/animations/player.res" id="2_27x84"]
[ext_resource type="PackedScene" uid="uid://d1qwpkyo280c1" path="res://scenes/health_bar_3d.tscn" id="4_juton"]
[ext_resource type="PackedScene" uid="uid://bmpi03xqpl7ac" path="res://scenes/gun.tscn" id="5_qvd5u"]
[ext_resource type="PackedScene" uid="uid://c78j5wxi5lcke" path="res://scenes/xp_bar.tscn" id="6_i6lqn"]
[ext_resource type="Texture2D" uid="uid://cv21fhsffavww" path="res://models/menu/kenney_ui-pack-rpg-expansion/PNG/panel_beige.png" id="6_rphpg"]
[ext_resource type="Texture2D" uid="uid://636gti51uhjx" path="res://models/menu/icons8-épée-48.png" id="7_swheu"]
[ext_resource type="Texture2D" uid="uid://cm1o7x8yle56k" path="res://models/menu/icons8-pistolet-26.png" id="8_7o4k0"]
[ext_resource type="Texture2D" uid="uid://bxbpk1r682cc7" path="res://models/menu/icons8-cadenas-30 (1).png" id="10_5o8jb"]
[ext_resource type="Texture2D" uid="uid://ovq16hr4mc1y" path="res://models/menu/kenney_ui-pack-rpg-expansion/PNG/buttonLong_brown.png" id="11_7qws5"]
[ext_resource type="Texture2D" uid="uid://10jmw4c1716j" path="res://models/menu/kenney_ui-pack-rpg-expansion/PNG/panel_brown.png" id="11_8frxu"]
[ext_resource type="Texture2D" uid="uid://dthyoyny0hof1" path="res://models/menu/icons8-house-fence-48.png" id="11_o5tqa"]
[ext_resource type="Texture2D" uid="uid://b3fn5yymrmn0b" path="res://models/menu/icons8-aimer-48.png" id="11_wg7ct"]
[ext_resource type="Texture2D" uid="uid://bladki2aknh81" path="res://models/menu/icons8-épée-48 (2).png" id="13_np20i"]
[ext_resource type="Texture2D" uid="uid://cyaswlxxtj40m" path="res://models/menu/kenney_ui-pack-rpg-expansion/PNG/buttonRound_brown.png" id="13_xhbj8"]
[ext_resource type="Texture2D" uid="uid://dkc8kt3ka2qns" path="res://models/menu/icons8-course-50 (1).png" id="14_0ipeq"]
[ext_resource type="Texture2D" uid="uid://d0ee3nxmbout1" path="res://models/menu/kenney_ui-pack-rpg-expansion/PNG/iconCross_brown.png" id="14_2nqlo"]
[ext_resource type="Texture2D" uid="uid://c8cfrpkbr7wlh" path="res://models/menu/kenney_ui-pack-rpg-expansion/PNG/buttonRound_beige.png" id="18_035vx"]
[ext_resource type="Texture2D" uid="uid://14fhl6g0hcb1" path="res://models/menu/kenney_ui-pack-rpg-expansion/PNG/arrowBeige_left.png" id="20_bdoxx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_x0nrt"]
radius = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_5q7xo"]
size = Vector3(0.534058, 1.68872, 0.838867)

[sub_resource type="LabelSettings" id="LabelSettings_03md6"]
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_woqgr"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_r0nkt"]
font_size = 35
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eyea5"]
font_size = 20
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lvag1"]
font_size = 50
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_bn4n3"]
line_spacing = 0.0
font_size = 20
font_color = Color(0, 1, 1, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_o0ci0"]
font_size = 20

[node name="Player" type="CharacterBody3D" groups=["player"]]
platform_floor_layers = 4294901769
platform_wall_layers = 8
script = ExtResource("1_k5g6x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_x0nrt")

[node name="visual" type="Node3D" parent="."]

[node name="paladin" parent="visual" instance=ExtResource("1_stwfy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00207, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="visual"]
root_node = NodePath("../paladin")
libraries = {
"player": ExtResource("2_27x84")
}

[node name="camera_mount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)

[node name="Camera3D" type="Camera3D" parent="camera_mount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 10
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0253296, -0.146118, -0.362488)
shape = SubResource("BoxShape3D_5q7xo")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)

[node name="Camera3D" type="Camera3D" parent="head"]

[node name="Steampunk Rifle" parent="head/Camera3D" instance=ExtResource("5_qvd5u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.332208, -0.245264, -0.514611)

[node name="PlayerUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar3D" parent="PlayerUI" instance=ExtResource("4_juton")]
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -92.0
offset_right = 158.0
offset_bottom = -72.0
grow_vertical = 0

[node name="XPBar" parent="PlayerUI" instance=ExtResource("6_i6lqn")]
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -104.0
offset_right = 150.0
offset_bottom = -98.0
grow_vertical = 0

[node name="HealthPortal" parent="PlayerUI" instance=ExtResource("4_juton")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 91.0
offset_top = 359.0
offset_right = 819.0
offset_bottom = 379.0
grow_horizontal = 1
rotation = -1.5708

[node name="LabelWaveAff" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 74.0
offset_right = 20.0
offset_bottom = 143.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_03md6")

[node name="TextureRect" type="TextureRect" parent="PlayerUI"]
layout_mode = 2
offset_left = 50.0
offset_top = 930.0
offset_right = 150.0
offset_bottom = 1038.57
grow_horizontal = 0
texture = ExtResource("18_035vx")
expand_mode = 5

[node name="Label" type="Label" parent="PlayerUI/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "Lvl. 1"
label_settings = SubResource("LabelSettings_woqgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FondNumberEnemy" type="TextureRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -159.0
offset_top = 43.0
offset_right = -59.0
offset_bottom = 143.0
grow_horizontal = 0
texture = ExtResource("6_rphpg")
expand_mode = 5

[node name="LabelNumberEnemy" type="Label" parent="PlayerUI/FondNumberEnemy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0 / 0"
label_settings = SubResource("LabelSettings_r0nkt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="class" type="VBoxContainer" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_right = -59.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="FondSword" type="TextureRect" parent="PlayerUI/class"]
layout_mode = 2
texture = ExtResource("6_rphpg")
expand_mode = 5

[node name="IconSword" type="TextureRect" parent="PlayerUI/class/FondSword"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_swheu")
expand_mode = 5

[node name="FondGun" type="TextureRect" parent="PlayerUI/class"]
layout_mode = 2
texture = ExtResource("6_rphpg")
expand_mode = 5

[node name="IconGun" type="TextureRect" parent="PlayerUI/class/FondGun"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_7o4k0")
expand_mode = 5

[node name="Lock" type="Control" parent="PlayerUI/class/FondGun"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PlayerUI/class/FondGun/Lock"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 19.0
offset_right = 62.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 0
text = "Lvl. 5"
label_settings = SubResource("LabelSettings_eyea5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconLock" type="TextureRect" parent="PlayerUI/class/FondGun/Lock"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -1.0
offset_right = 50.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_5o8jb")
expand_mode = 5

[node name="FondWall" type="TextureRect" parent="PlayerUI/class"]
layout_mode = 2
texture = ExtResource("6_rphpg")
expand_mode = 5

[node name="IconWall" type="TextureRect" parent="PlayerUI/class/FondWall"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -27.5
offset_right = 30.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_o5tqa")
expand_mode = 5

[node name="Lock" type="Control" parent="PlayerUI/class/FondWall"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PlayerUI/class/FondWall/Lock"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 19.0
offset_right = 62.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 0
text = "Lvl. 8"
label_settings = SubResource("LabelSettings_eyea5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconLock" type="TextureRect" parent="PlayerUI/class/FondWall/Lock"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -1.0
offset_right = 50.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_5o8jb")
expand_mode = 5

[node name="PlayerInv" type="Control" parent="PlayerUI"]
process_mode = 3
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="FondInv" type="TextureRect" parent="PlayerUI/PlayerInv"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rphpg")
expand_mode = 5

[node name="LabelWave" type="Label" parent="PlayerUI/PlayerInv/FondInv"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_top = 61.0
offset_right = 18.0
offset_bottom = 84.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Vague N°0"
label_settings = SubResource("LabelSettings_lvag1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonWave" type="Button" parent="PlayerUI/PlayerInv/FondInv"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -106.0
offset_right = 100.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../ButtonQuitInv")
focus_neighbor_bottom = NodePath("../../ContainerButtons/ButtonHeart")
flat = true

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/FondInv/ButtonWave"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_7qws5")

[node name="Label" type="Label" parent="PlayerUI/PlayerInv/FondInv/ButtonWave"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "Vague Suivante"
label_settings = SubResource("LabelSettings_bn4n3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonQuitInv" type="Button" parent="PlayerUI/PlayerInv/FondInv"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_bottom = 110.0
grow_horizontal = 0
focus_neighbor_bottom = NodePath("../ButtonWave")
flat = true

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/FondInv/ButtonQuitInv"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0263
offset_top = -25.0
offset_right = 23.0263
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("13_xhbj8")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/FondInv/ButtonQuitInv/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0263
offset_top = -12.0
offset_right = 52.307
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_2nqlo")
expand_mode = 3
stretch_mode = 5

[node name="ContainerImages" type="BoxContainer" parent="PlayerUI/PlayerInv"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -202.0
offset_right = 154.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackHeart" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerImages"]
layout_mode = 2
texture = ExtResource("11_8frxu")

[node name="Heart" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerImages/BackHeart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -41.0
offset_right = 50.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_wg7ct")
stretch_mode = 3

[node name="LabelHeart" type="Label" parent="PlayerUI/PlayerInv/ContainerImages/BackHeart"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -29.0
offset_right = 20.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
text = "Lvl. 1"

[node name="BackAttack" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerImages"]
layout_mode = 2
texture = ExtResource("11_8frxu")

[node name="Attack" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerImages/BackAttack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -41.0
offset_right = 50.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_np20i")
stretch_mode = 3

[node name="LabelAttack" type="Label" parent="PlayerUI/PlayerInv/ContainerImages/BackAttack"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -29.0
offset_right = 20.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
text = "Lvl. 1"

[node name="BackSpeed" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerImages"]
layout_mode = 2
texture = ExtResource("11_8frxu")

[node name="Speed" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerImages/BackSpeed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -41.0
offset_right = 50.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_0ipeq")
stretch_mode = 3

[node name="LabelSpeed" type="Label" parent="PlayerUI/PlayerInv/ContainerImages/BackSpeed"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -29.0
offset_right = 20.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
text = "Lvl. 1"

[node name="ContainerButtons" type="BoxContainer" parent="PlayerUI/PlayerInv"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -90.0
offset_right = 154.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ButtonHeart" type="Button" parent="PlayerUI/PlayerInv/ContainerButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../ButtonSpeed")
focus_neighbor_top = NodePath("../../FondInv/ButtonWave")
focus_neighbor_right = NodePath("../ButtonAttack")
flat = true

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerButtons/ButtonHeart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0263
offset_top = -25.0
offset_right = 23.0263
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("13_xhbj8")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerButtons/ButtonHeart/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.02632
offset_top = -21.0
offset_right = 64.307
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_2nqlo")
expand_mode = 3
stretch_mode = 5

[node name="ButtonAttack" type="Button" parent="PlayerUI/PlayerInv/ContainerButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../ButtonHeart")
focus_neighbor_top = NodePath("../../FondInv/ButtonWave")
focus_neighbor_right = NodePath("../ButtonSpeed")
flat = true

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerButtons/ButtonAttack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0263
offset_top = -25.0
offset_right = 23.0263
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("13_xhbj8")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerButtons/ButtonAttack/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.02632
offset_top = -21.0
offset_right = 64.307
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_2nqlo")
expand_mode = 3
stretch_mode = 5

[node name="ButtonSpeed" type="Button" parent="PlayerUI/PlayerInv/ContainerButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../ButtonAttack")
focus_neighbor_top = NodePath("../../FondInv/ButtonWave")
focus_neighbor_right = NodePath("../ButtonHeart")
flat = true

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerButtons/ButtonSpeed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0263
offset_top = -25.0
offset_right = 23.0263
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("13_xhbj8")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="PlayerUI/PlayerInv/ContainerButtons/ButtonSpeed/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.02632
offset_top = -21.0
offset_right = 64.307
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_2nqlo")
expand_mode = 3
stretch_mode = 5

[node name="LabelDispo" type="Label" parent="PlayerUI/PlayerInv"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = 15.0
offset_right = 154.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
text = "Amélioration de compétence disponible"

[node name="ArrowBeigeLeft" type="Sprite2D" parent="PlayerUI"]
position = Vector2(1890, 450)
rotation = 1.5708
texture = ExtResource("20_bdoxx")

[node name="ArrowBeigeLeft2" type="Sprite2D" parent="PlayerUI"]
position = Vector2(1890, 520)
rotation = -1.5708
texture = ExtResource("20_bdoxx")

[node name="Label" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_top = 474.0
offset_right = -9.0
offset_bottom = 497.0
grow_horizontal = 0
text = "TAB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -138.0
offset_top = 1040.0
offset_right = -11.0
offset_bottom = 1068.0
grow_horizontal = 0
text = "E : Inventaire"
label_settings = SubResource("LabelSettings_o0ci0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerRegen" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="animation_finished" from="visual/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="pressed" from="PlayerUI/PlayerInv/FondInv/ButtonWave" to="." method="_on_button_wave_pressed"]
[connection signal="pressed" from="PlayerUI/PlayerInv/FondInv/ButtonQuitInv" to="." method="_on_button_quit_inv_pressed"]
[connection signal="focus_entered" from="PlayerUI/PlayerInv/ContainerButtons/ButtonHeart" to="." method="_on_button_heart_focus_entered"]
[connection signal="pressed" from="PlayerUI/PlayerInv/ContainerButtons/ButtonHeart" to="." method="_on_button_heart_pressed"]
[connection signal="pressed" from="PlayerUI/PlayerInv/ContainerButtons/ButtonAttack" to="." method="_on_button_attack_pressed"]
[connection signal="pressed" from="PlayerUI/PlayerInv/ContainerButtons/ButtonSpeed" to="." method="_on_button_speed_pressed"]
[connection signal="timeout" from="TimerRegen" to="." method="_on_timer_regen_timeout"]
